# geothermal_active_learning

./: .gitignore  README.md  pyproject.toml
configs/: ablation_datasets.json  ablation_seed_hard_fulldepth.json  ablation_seed_simple_2pair.json  ablation_seed_simple_2pair_pilot.json  al_cma_surrogate_clean.json  al_cma_surrogate_hybrid.json  al_cma_surrogate_npv.json  al_cma_surrogate_npv_double40.json  al_cma_surrogate_npv_long20.json  al_cma_surrogate_npv_multistart.json  al_cma_surrogate_npv_multistart_fulldepth_seed42.json  al_cma_surrogate_npv_multistart_gated.json  al_cma_surrogate_npv_multistart_gated_s1042.json  al_cma_surrogate_npv_multistart_gated_s2042.json  al_cma_surrogate_npv_multistart_s1042.json  al_cma_surrogate_npv_short20.json  al_cma_surrogate_npv_short40.json  al_default.json  al_ensemble_hybrid.json  al_hybrid.json  al_hybrid_post_fix.json  al_smoke.json  baseline_global.json  baseline_global_depth5055.json  baseline_global_npv.json  baseline_global_npv_depth5055.json  baseline_global_npv_depth5055_seed43.json  baseline_global_npv_depth5055_seed44.json  baseline_global_npv_seed43.json  baseline_global_npv_seed44.json  baseline_global_seed43.json  baseline_global_smoke.json  geologies_full.json  geologies_full_local.json
orchestrator/: __init__.py  acquire.py  baseline_optimizer.py  emv.py  gating.py  ingest.py  log.py  npv_metrics.py  paths.py  remote.py  retrain.py  seed.py  select.py  slurm.py  stage.py  state.py  stop.py
sbatch/: ingest.sbatch.template  ingest_baseline.sbatch.template  reprocess_iswell_fix.sbatch  seed_ingest.sbatch.template  (+1 more)
(+45 files in other folders)
